# softlab

./: .gitignore  LICENSE  README.md  README.rst  pyproject.toml  setup.py
softlab/: __init__.py  _version.py
softlab/huo/: __init__.py  base.py  impl.py  impl_scheduler.py  process.py
softlab/jin/: __init__.py  miscellaneous.py  validator.py
softlab/mu/: __init__.py
softlab/mu/notebooks/: __init__.py  file_selector.py  interactive.py
softlab/mu/services/: __init__.py
softlab/shui/: __init__.py  backend.py  data_backend.py  data_io.py
softlab/shui/data/: __init__.py  backend.py  base.py  io.py
softlab/shui/profile/: __init__.py  base.py  manage.py
softlab/shui/profile/backend/: base.py  getter.py  json_profile.py  memory.py
softlab/tu/: __init__.py  device.py  helpers.py  limited_attribute.py  parameter.py  station.py  visa.py
softlab/tu/dsp/: __init__.py  base.py  common.py  iq_modulation.py  noise.py  operate.py  window.py
test/: test_basic.ipynb  test_visa.ipynb  test_zi.ipynb
tests/: visa_sim.yaml
